# deerwatcher-rs

./: Cargo.toml  README.md  config.json
.github/workflows/: build.yml  release.yml
src/: config.rs  copy.rs  execute.rs  glob.rs  main.rs  watcher.rs
src/utils/: config.rs  copy.rs  execute.rs  glob.rs  mod.rs  watcher.rs
tests/: config.rs
