[package]
name = "deerwatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "deerwatcher"
path = "src/main.rs"

[dependencies]
walkdir = "2.3.1"
notify = "4.0.17"
wax = "0.5.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2.0"